Mon Feb 26 17:18:20 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/Sequence_Unit_Tests/unbounded_sequence_cdr_ut.cpp:

          Added a #include for the octet-sequence specialization.

Mon Feb 26 14:44:07 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/lex.yy.cpp:

          Reverted my change (committed by Jeff Parsons on my behalf) from
          Tue Nov 28 19:32:46 UTC 2006.  While it fixed an issues with the
          Sun preprocessor (e.g., negative numbers coming out like "- 9"),
          it causes problems with normal subtraction.  Thanks to Jules
          Colding <olding at omesc dot com> for reporting this.  This fixes
          bugzilla bug #2821.

Mon Feb 26 13:57:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/*.{h,cpp}:
        * tao/UB_String_Argument_T.{cpp,inl}:
          Refactored layout using 1.12 version of StyleManager

Mon Feb 26 13:43:45 UTC 2007  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Notify/Method_Request_Dispatch.cpp:
        * orbsvcs/tests/FT_App/FT_Creator.cpp:
        * orbsvcs/tests/FT_App/TAO_Object_Group_Creator.cpp:
        * tao/ORB.cpp:
        * tao/ORB_Core.cpp:

          Pass correct buffer length to ACE_OS::snprintf().
          Thanks to Yves Alloyer <alloyer at ipanematech dot com> for
          reporting this and providing initial patch. This fixes Bug #2797.

Mon Feb 26 13:43:44 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tests/DiffServ/server.cpp:

          Removed usage of old macros.

Sun Feb 25 21:56:31 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tests/DiffServ/server.cpp:

          Removed ACE_THROW_SPEC in the function definitions and
          declarations. Helps fix the fuzz build errors.

Sun Feb 25 17:28:52 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tests/DiffServ/run_test.pl:

          Added a regression test script for the DiffServ policy test.
