@@ -161,7 +161,11 @@ int
 TAO_Naming_Server::parse_args (int argc,
                                ACE_TCHAR *argv[])
 {
+#if (TAO_HAS_MINIMUM_POA == 0) && !defined (CORBA_E_COMPACT)
   ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("b:do:p:s:f:m:u:r:z:"));
+#else
+  ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("b:do:p:s:f:m:z:"));
+#endif /* TAO_HAS_MINIMUM_POA */
 
   int c;
   int size, result;
@@ -218,6 +222,7 @@ TAO_Naming_Server::parse_args (int argc,
         this->persistence_file_name_ = get_opts.opt_arg ();
         f_opt_used = 1;
         break;
+#if (TAO_HAS_MINIMUM_POA == 0) && !defined (CORBA_E_COMPACT)
       case 'r':
         this->use_redundancy_ = 1;
         this->use_storable_context_ = 1;
@@ -229,6 +234,7 @@ TAO_Naming_Server::parse_args (int argc,
         this->persistence_file_name_ = get_opts.opt_arg ();
         u_opt_used = 1;
         break;
+#endif /* TAO_HAS_MINIMUM_POA == 0 */
       case 'z':
         this->use_round_trip_timeout_ = 1;
         this->round_trip_timeout_ = (int)1.0e7 * ACE_OS::atoi (get_opts.opt_arg ());
@@ -244,8 +250,10 @@ TAO_Naming_Server::parse_args (int argc,
                            ACE_TEXT ("-b <base_address> ")
                            ACE_TEXT ("-m <1=enable multicast, 0=disable multicast(default) ")
                            ACE_TEXT ("-f <persistence_file_name> ")
+#if (TAO_HAS_MINIMUM_POA == 0) && !defined (CORBA_E_COMPACT)
                            ACE_TEXT ("-u <storable_persistence_directory (not used with -f)> ")
                            ACE_TEXT ("-r <redundant_persistence_directory> ")
+#endif /* TAO_HAS_MINIMUM_POA */
                            ACE_TEXT ("-z <relative round trip timeout> ")
                            ACE_TEXT ("\n"),
                            argv [0]),
