@@ -1,3 +1,9 @@
+Mon Feb 26 17:25:00 UTC 2007  Simon Massey  <sma@prismtech.com>
+
+        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
+
+          Removed persistance options that rely on non-minimum corba.
+
 Mon Feb 26 17:18:20 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * tests/Sequence_Unit_Tests/unbounded_sequence_cdr_ut.cpp:
